k3s/api-front/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-front
  namespace: demo-project
spec:
  type: ClusterIP
  selector:
    app: api-front
  ports:
    - name: http
      protocol: TCP
      port: 8001
      targetPort: 8001
