k3s/api-front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-front
  namespace: demo-project
spec:
  ingressClassName: traefik
  rules:
    - host: emsc.testing.audit-io.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-front
                port:
                  number: 8001
